syntax = "proto3";

package dg.model;

import "common.proto";

message GenericObj {
    ObjType ObjType = 1;
    DataFmtType FmtType = 2;
    bytes BinData = 3;
}

enum CutboardType {
    CUTBOARD_TYPE_UNKNOWN = 0;
    CUTBOARD_TYPE_VEHICLE = 1;
    CUTBOARD_TYPE_SYMBOL  = 2;
    CUTBOARD_TYPE_PLATE   = 3;
}